examples/test/testpolicy17877.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17877
  namespace: namespace225
spec:
  podSelector:
    matchLabels:
      key39: value1
      key19: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value20
      podSelector:
        matchLabels:
          key32: value39
          key44: value13
